# ipctest-rs

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: main.rs
events/: Cargo.toml
events/src/: main.rs
hello/: Cargo.toml
hello/src/: main.rs
msgs/: Cargo.toml
msgs/src/: main.rs
protos/: Cargo.toml  build.rs
protos/src/: lib.rs
protos/src/event/: event.proto  mod.rs
protos/src/hello/: hello.proto  mod.rs
shared/: Cargo.toml
shared/src/pipe/server/: mod.rs  windows.rs
