[workspace]
members = ["core", "hello", "msgs", "protos"]
resolver = "3"

[workspace.dependencies]
interprocess = { version = "2.2.3", features = ["tokio"] }
prost = "0.14.1"
tokio = { version = "1.48.0", features = ["fs", "signal", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
tonic = "0.14.2"
tonic-prost = "0.14.2"
