[package]
name = "hello"
version = "0.1.0"
edition = "2024"

[dependencies]
interprocess = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }
windows = { workspace = true }

protos = { path = "../protos" }