[package]
name = "hello"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tower = { workspace = true }
hyper-util = { workspace = true }

protos = { path = "../protos" }
shared = { path = "../shared" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [ "Win32" ] }