[package]
name = "protos"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tower = { workspace = true }
prost = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [ "Win32" ] }

[build-dependencies]
prost-build = "0.14.1"
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
